🐛 Fixed too small description width

--- a/public/global.css
+++ b/public/global.css
@@ -51,4 +51,4 @@ input:focus {
     flex-direction: column;
 }
 .name { font-size: 1.25rem }
-.description { font-size: 0.75rem }
+.description { font-size: 0.75rem; width: 50vw }
